Added bmnc and trimodal analysis

--- a/notebooks/cbmc-analysis.ipynb
+++ b/notebooks/cbmc-analysis.ipynb
@@ -13,7 +13,16 @@
    "execution_count": 1,
    "id": "cbecf6ce",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/groups/song/songlab2/jacobrl3/sc-spectrum/venv/lib/python3.7/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "from sc_spectrum.scml import rbf_neighbor_graph\n",
     "from sc_spectrum.scml import sparse_spectral\n",
@@ -385,8 +394,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Start: Thu Jan 13 14:28:15 2022\n",
-      "End: Thu Jan 13 14:28:24 2022\n"
+      "Start: Fri May 20 15:42:34 2022\n",
+      "End: Fri May 20 15:42:42 2022\n"
      ]
     }
    ],
@@ -462,6 +471,59 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3dfcadab",
+   "metadata": {},
+   "source": [
+    "## NMI comparison of clustering"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "0b5c80c7",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RNA-WNN = 0.801923338387128\n",
+      "ADT-WNN = 0.8513769227152255\n",
+      "RNA-WLL = 0.8353946866175317\n",
+      "ADT-WLL = 0.8764357995900173\n",
+      "RNA-SCML = 0.836541356905639\n",
+      "ADT-SCML = 0.8812655335152556\n",
+      "RNA-ADT NMI = 0.7542256176750637\n",
+      "WLL-WNN NMI = 0.8789990174875865\n",
+      "SCML-WNN NMI = 0.8607991849324254\n",
+      "SCML-WLL NMI = 0.915074392026676\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Load the WLL clustering\n",
+    "cl_wll = pd.read_csv(input_dir + \"CBMC_8005_WLL_12.csv\", header = 0, index_col = 0)\n",
+    "\n",
+    "print(\"RNA-WNN = {}\".format(normalized_mutual_info_score(cl_rna, seurat_meta[\"wsnn_res.0.2\"][human_cells])))\n",
+    "print(\"ADT-WNN = {}\".format(normalized_mutual_info_score(cl_adt, seurat_meta[\"wsnn_res.0.2\"][human_cells])))\n",
+    "\n",
+    "print(\"RNA-WLL = {}\".format(normalized_mutual_info_score(cl_rna, cl_wll[\"WLL_12\"])))\n",
+    "print(\"ADT-WLL = {}\".format(normalized_mutual_info_score(cl_adt, cl_wll[\"WLL_12\"])))\n",
+    "\n",
+    "print(\"RNA-SCML = {}\".format(normalized_mutual_info_score(cl_rna, cbmc_scml_cls)))\n",
+    "print(\"ADT-SCML = {}\".format(normalized_mutual_info_score(cl_adt, cbmc_scml_cls)))\n",
+    "\n",
+    "print(\"RNA-ADT NMI = {}\".format(normalized_mutual_info_score(cl_rna, cl_adt)))\n",
+    "print(\"WLL-WNN NMI = {}\".format(normalized_mutual_info_score(cl_wll[\"WLL_12\"], seurat_meta[\"wsnn_res.0.2\"][human_cells])))\n",
+    "print(\"SCML-WNN NMI = {}\".format(normalized_mutual_info_score(cbmc_scml_cls, seurat_meta[\"wsnn_res.0.2\"][human_cells])))\n",
+    "print(\"SCML-WLL NMI = {}\".format(normalized_mutual_info_score(cbmc_scml_cls, cl_wll[\"WLL_12\"])))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "66be2d26",
    "metadata": {},
    "source": [
@@ -470,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "35178152",
    "metadata": {},
    "outputs": [],
@@ -490,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "7ebb702b",
    "metadata": {},
    "outputs": [],
@@ -519,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "323051da",
    "metadata": {},
    "outputs": [
@@ -550,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "7f016ef6",
    "metadata": {},
    "outputs": [
@@ -581,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "75770856",
    "metadata": {},
    "outputs": [
@@ -612,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "id": "ee3334cc",
    "metadata": {},
    "outputs": [
@@ -651,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "id": "16d75455",
    "metadata": {},
    "outputs": [
@@ -704,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "id": "842f6e7d",
    "metadata": {},
    "outputs": [
@@ -776,7 +838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "id": "d44e60b8",
    "metadata": {},
    "outputs": [
@@ -807,7 +869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "id": "c3f709c6",
    "metadata": {},
    "outputs": [
@@ -838,7 +900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "id": "8027307e",
    "metadata": {},
    "outputs": [
@@ -869,7 +931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "id": "5fa9fb08",
    "metadata": {},
    "outputs": [
@@ -908,7 +970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "id": "0b0bad0d",
    "metadata": {},
    "outputs": [],
@@ -920,7 +982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "id": "991e1dd8",
    "metadata": {},
    "outputs": [
@@ -930,7 +992,7 @@
        "<AxesSubplot:xlabel='scml_cls', ylabel='CD8'>"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -951,7 +1013,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "id": "303d9676",
    "metadata": {},
    "outputs": [
@@ -961,7 +1023,7 @@
        "<AxesSubplot:xlabel='scml_cls', ylabel='CD45RA'>"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -982,7 +1044,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "id": "378817e9",
    "metadata": {},
    "outputs": [
@@ -992,7 +1054,7 @@
        "Text(0, 0.5, 'ADT library size')"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1018,7 +1080,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "id": "599525d7",
    "metadata": {},
    "outputs": [
@@ -1037,7 +1099,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "id": "5dbb9fa0",
    "metadata": {},
    "outputs": [],
@@ -1049,7 +1111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "id": "054c939d",
    "metadata": {},
    "outputs": [
@@ -1059,7 +1121,7 @@
        "Text(0, 0.5, 'RNA library size')"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1084,7 +1146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "id": "40b8ba85",
    "metadata": {},
    "outputs": [
@@ -1111,7 +1173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "id": "610cc2fe",
    "metadata": {},
    "outputs": [
@@ -1143,7 +1205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 39,
    "id": "46861257",
    "metadata": {},
    "outputs": [
@@ -1153,7 +1215,7 @@
        "(8005, 30)"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1164,7 +1226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 40,
    "id": "7bcc0937",
    "metadata": {},
    "outputs": [
@@ -1212,7 +1274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 41,
    "id": "0ad5335b",
    "metadata": {
     "scrolled": true
@@ -1245,7 +1307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 42,
    "id": "3b36f1b4",
    "metadata": {},
    "outputs": [
@@ -1282,7 +1344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 43,
    "id": "a26fa58c",
    "metadata": {},
    "outputs": [],
@@ -1296,7 +1358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 44,
    "id": "cef29cd0",
    "metadata": {},
    "outputs": [
@@ -1342,7 +1404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 45,
    "id": "0ddf7b3b",
    "metadata": {
     "scrolled": true
@@ -1381,7 +1443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 46,
    "id": "30534068",
    "metadata": {},
    "outputs": [
@@ -1418,7 +1480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 47,
    "id": "48ba55bf",
    "metadata": {},
    "outputs": [],
@@ -1432,7 +1494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 48,
    "id": "6636f0e9",
    "metadata": {},
    "outputs": [
@@ -1591,8 +1653,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Start: Thu Jan 13 14:48:22 2022\n",
-      "End: Thu Jan 13 14:48:28 2022\n"
+      "Start: Mon Apr 11 11:57:06 2022\n",
+      "End: Mon Apr 11 11:57:17 2022\n"
      ]
     }
    ],
