Cleaned up paths

--- a/notebooks/synthetic-trimodal-analysis.ipynb
+++ b/notebooks/synthetic-trimodal-analysis.ipynb
@@ -5,17 +5,9 @@
    "execution_count": 1,
    "id": "1f4988a4",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/groups/song/songlab2/jacobrl3/sc-spectrum/venv/lib/python3.7/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "%%capture\n",
     "from sc_spectrum.scml import rbf_neighbor_graph\n",
     "from sc_spectrum.scml import sparse_spectral\n",
     "from sc_spectrum.scml import scml\n",
